# sanchaar

./: .gitignore  .mise.toml  Cargo.toml  Readme.md  components.d.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  todo.md  tsconfig.json  tsconfig.node.json  vite.config.ts
.cargo/: config.toml
.github/: RELEASE.md
.github/workflows/: ci.yml  package.yml  release.yml
TestBench/: Sample.toml
TestBench/First Folder/: Body Json.toml
TestBench/environments/: Prod.toml  Staging.toml
TestCollection/: .env  collection.hcl  collection.toml
TestCollection/environments/: Dev.hcl  Dev.toml  Test.hcl
TestCollection/requests/: Sample Root.hcl  Sample Root.toml
TestCollection/requests/First Folder/: Body Json.hcl  Body Json.toml
assets/: sanchaar.desktop
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/app/src/app/: content_section.rs
crates/app/src/app/panels/: http_request.rs
crates/app/src/app/panels/http_request/panes/response/: idle.rs
crates/app/src/state/: tab.rs
crates/cli/: Cargo.toml
crates/cli/src/: color.rs  lib.rs  run.rs  test.rs
crates/components/: Cargo.toml
crates/components/src/: bordered.rs  button_tabs.rs  card_tabs.rs  code_editor.rs  context_menu.rs  double_pass.rs  editor.rs  helpers.rs  horizontal_line.rs  icon.rs  key_value_editor.rs  key_value_viewer.rs  lib.rs  line_editor.rs  lines.rs  min_dimension.rs  min_width.rs  modal.rs  multi_file_picker.rs  table.rs  text_editor.rs
crates/core/: Cargo.toml
crates/core/src/: client.rs  ids.rs  lib.rs  utils.rs
crates/core/src/assertions/: mod.rs  runner.rs
crates/core/src/collection/: collection.rs  environment.rs  mod.rs  request.rs
crates/core/src/curl/: generator.rs  mod.rs  parser.rs
crates/core/src/http/: assertions.rs  collection.rs  environment.rs  mod.rs  request.rs  request_loader.rs
crates/core/src/import/: postman.rs
crates/core/src/import/postman/: schema.rs
crates/core/src/parsers/: mod.rs  template.pest
crates/core/src/perf/: metrics.rs  mod.rs  runner.rs
crates/core/src/persistence/: assertions.rs  collections.rs  database.rs  environment.rs  fs.rs  history.rs  mod.rs  request.rs
crates/core/src/scripting/: mod.rs  runner.rs
crates/core/src/transformers/: mod.rs  request.rs  script.rs
crates/gui/: Cargo.toml
crates/gui/src/: hotkeys.rs  lib.rs
crates/gui/src/app/: collection_tree.rs  content_section.rs  mod.rs
crates/gui/src/app/panels/: cookie_store.rs  http_request.rs  mod.rs
crates/gui/src/app/panels/collection/: env_editor.rs  mod.rs  settings.rs
crates/gui/src/app/panels/http/: action_bar.rs  mod.rs  url_bar.rs
crates/gui/src/app/panels/http/panes/request/: auth_editor.rs  body_editor.rs  body_view.rs  mod.rs
crates/gui/src/app/panels/http/panes/response/: completed.rs  idle.rs  mod.rs
crates/gui/src/app/panels/http_request/: action_bar.rs  url_bar.rs
crates/gui/src/app/panels/http_request/panes/request/: auth_editor.rs  body_view.rs  mod.rs
crates/gui/src/app/panels/http_request/panes/response/: completed.rs  executing.rs  failed.rs  idle.rs  mod.rs
crates/gui/src/app/popups/: app_settings.rs  create_collection.rs  environment_editor.rs  mod.rs  name_popup.rs  save_request.rs
crates/gui/src/commands/: builders.rs  dialog.rs  mod.rs
crates/gui/src/state/: collection_tab.rs  environment.rs  http_tab.rs  mod.rs  popups.rs  request.rs  response.rs  tab.rs
crates/gui/src/state/tabs/: collection_tab.rs  http_tab.rs  mod.rs
crates/js/: Cargo.toml
crates/js/src/: lib.rs  request.rs
crates/js/src/extensions/: sanchaar.js
crates/parsers/: Cargo.toml
crates/parsers/src/: lib.rs  template.pest
homebrew/: sanchaar.rb
persistence/: Get Todos.toml  Get_Todos.toml  req.toml
scripts/: generate_icon.sh
server/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
server/echo/: go.mod  index.ts  main.go  package.json  tsconfig.json  wrangler.toml
server/echo/src/: index.ts
server/proxy/: index.ts  wrangler.toml
src/: App.vue  app.rs  debug.rs  hotkeys.rs  ids.rs  main.rs  main.ts  styles.css  styles.scss  subscription.rs  types.d.ts  window.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/schemas/: macOS-schema.json  plugin-manifests.json
src-tauri/src/: main.rs
src/app/: bottom_bar.rs  collection_tree.rs  content_section.rs  main_page.rs  mod.rs
src/app/panels/: cookie_store.rs  history.rs  http_request.rs  mod.rs
src/app/popups/: app_settings.rs  create_collection.rs  create_folder.rs  environment_editor.rs  mod.rs  name_popup.rs  rename_popup.rs  save_request.rs  update_confirmation.rs
src/backend/: api.ts  client.ts  fs.ts  replacer.ts  store.ts
src/backend/api/: fs.ts  index.ts
src/backend/browser/: axios.ts
src/backend/preprocess/: index.ts  pathParams.ts
src/backend/tauri/: axios.ts  fs.ts
src/commands/: builders.rs  cancellable_task.rs  commands.rs  dialog.rs  mod.rs  perf.rs
src/components/: Box.vue  KeyVal.vue  KeyValEditor.vue  ScrollBox.vue  bordered.rs  button_tabs.rs  card_tabs.rs  code_editor.rs  code_viewer.rs  colors.rs  context_menu.rs  editor.rs  helpers.rs  highlighters.rs  icon.rs  key_value_editor.rs  key_value_viewer.rs  keyval_editor.rs  keyval_viewer.rs  line_editor.rs  lines.rs  min_dimension.rs  mod.rs  modal.rs  multi_file_picker.rs  script_view.rs  scrollable.rs  split.rs
src/components/HttpTab/: HttpTab.vue
src/components/MainPage/: MainPage.vue  SidePanel.vue
src/core/: client.rs  client.ts  ids.rs  methods.ts  mod.rs  request.ts  response.ts
src/models/: collection.ts  common.ts  environment.ts  methods.ts  request.ts  response.ts
src/pages/: MainPage.vue  Request.vue  RequestPage.vue
src/panels/: http_request.rs  mod.rs
src/state/: collection.rs  environment.rs  mod.rs  popups.rs  request.rs  response.rs  session.rs  tab.rs  utils.rs
src/stores/: collections.ts  requests.ts  tabs.ts
src/transformers/: request.rs
src/utils/: methodColor.ts  prettyMs.ts
src/widgets/: helpers.rs  mod.rs  tooltip.rs
wix/: License.rtf  main.wxs
(+96 files in other folders)
