[package]
name = "Sanchaar"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true

[package.metadata.bundle]
name = "Sanchaar"
identifier = "com.nrjais.sanchaar"
icon = [
  "assets/16x16.png",
  "assets/16x16@2x.png",
  "assets/32x32.png",
  "assets/32x32@2x.png",
  "assets/64x64.png",
  "assets/64x64@2x.png",
  "assets/128x128.png",
  "assets/128x128@2x.png",
  "assets/256x256.png",
  "assets/256x256@2x.png",
  "assets/512x512.png",
  "assets/512x512@2x.png",
]

[workspace]
members = [
  "crates/components",
  "crates/core",
  "crates/parsers",
]

[workspace.package]
version = "0.1.0-prerelease.1"
authors = ["Neeraj Jaiswal <me@nrjais.com>"]
edition = "2024"
description = "A fast offline REST API Client"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
components = { path = "crates/components" }
cookie_store = "0.21"
core = { path = "crates/core" }
directories = "6.0"
dotenvy = "0.15.3"
hcl-rs = "0.18"
humansize = "2.1"
iced = { branch = "editor", features = [
  "advanced",
  "debug",
  "highlighter",
  "lazy",
  "tokio",
  "web-colors",
  "wgpu",
], git = "https://github.com/nrjais/iced" }
iced_core = { branch = "editor", features = [
  "advanced",
], git = "https://github.com/nrjais/iced" }
indexmap = "2.10"
jsonformat = "2.1.0"
jsonpath-rust = "1.0"
log = "0.4"
mime_guess = "2.0"
parsers = { path = "crates/parsers" }
pest = "2.7"
pest_derive = "2.7"
regex = "1.10"
reqwest = { version = "0.12", features = ["multipart", "stream"] }
reqwest_cookie_store = "0.8"
rfd = { version = "0.15", default-features = false, features = [
  "tokio",
  "xdg-portal",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9.0"
similar = "2.5"
sqlx = { version = "0.8", features = [
  "chrono",
  "runtime-tokio-native-tls",
  "sqlite",
  "uuid",
] }
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1.36", features = ["fs", "io-util", "macros"] }

[dependencies]
anyhow.workspace = true
chrono.workspace = true
components.workspace = true
cookie_store.workspace = true
core.workspace = true
humansize.workspace = true
iced.workspace = true
indexmap.workspace = true
jsonformat.workspace = true
jsonpath-rust.workspace = true
log.workspace = true
reqwest.workspace = true
reqwest_cookie_store.workspace = true
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
strum.workspace = true
tokio.workspace = true
uuid = { version = "1.0", features = ["v4"] }

[features]
default = ["iced/hot"]

[profile.dev]
debug = 0
incremental = true

[profile.dev.package."*"]
opt-level = 3
