[package]
name = "Sanchaar"
version.workspace = true
edition.workspace = true
description.workspace = true

[package.metadata.bundle]
name = "Sanchaar"
identifier = "com.nrjais.sanchaar"
icon = [
  "assets/16x16.png",
  "assets/16x16@2x.png",
  "assets/32x32.png",
  "assets/32x32@2x.png",
  "assets/64x64.png",
  "assets/64x64@2x.png",
  "assets/128x128.png",
  "assets/128x128@2x.png",
  "assets/256x256.png",
  "assets/256x256@2x.png",
  "assets/512x512.png",
  "assets/512x512@2x.png",
]
category = "DeveloperTool"
short_description = "A fast offline REST API Client"

[package.metadata.deb]
maintainer = "Sanchaar <sanchaar@nrjais.com>"
copyright = "2025, Sanchaar Contributors"
license-file = ["LICENSE", "4"]
extended-description = """\
Sanchaar is an offline REST API client built using Iced in Rust. \
It is a simple tool to test REST APIs without the need of internet connection. \
It supports GET, POST, PUT, DELETE requests with path, query and header parameters."""
depends = "$auto"
section = "net"
priority = "optional"
assets = [
  ["target/release/Sanchaar", "usr/bin/", "755"],
  [
    "assets/512x512.png",
    "usr/share/icons/hicolor/512x512/apps/sanchaar.png",
    "644",
  ],
  [
    "assets/256x256.png",
    "usr/share/icons/hicolor/256x256/apps/sanchaar.png",
    "644",
  ],
  [
    "assets/128x128.png",
    "usr/share/icons/hicolor/128x128/apps/sanchaar.png",
    "644",
  ],
  [
    "assets/48x48.png",
    "usr/share/icons/hicolor/48x48/apps/sanchaar.png",
    "644",
  ],
  [
    "assets/32x32.png",
    "usr/share/icons/hicolor/32x32/apps/sanchaar.png",
    "644",
  ],
  [
    "assets/16x16.png",
    "usr/share/icons/hicolor/16x16/apps/sanchaar.png",
    "644",
  ],
  ["Readme.md", "usr/share/doc/sanchaar/README", "644"],
]

[package.metadata.deb.variants.arm64]
maintainer = "Sanchaar <sanchaar@nrjais.com>"
depends = "$auto"

[workspace]
members = [
  "crates/core",
  "crates/parsers",
]

[workspace.package]
version = "0.1.0-prerelease.1"
edition = "2024"
description = "A fast offline REST API Client"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
cookie_store = "0.22"
core = { path = "crates/core" }
directories = "6.0"
dotenvy = "0.15.3"
env_logger = "0.11"
humansize = "2.1"
iced = { git = "https://github.com/nrjais/iced", branch = "editor", features = [
  "advanced",
  "highlighter",
  "lazy",
  "tokio",
  "web-colors",
  "wgpu",
] }
iced_core = { git = "https://github.com/nrjais/iced", branch = "editor", features = [
  "advanced",
] }
iced_plugins = { git = "https://github.com/nrjais/iced_plugins", branch = "fork" }
iced_window_state_plugin = { git = "https://github.com/nrjais/iced_plugins", branch = "fork" }
indexmap = "2.11"
jsonformat = "2.1.0"
jsonpath-rust = "1.0"
log = "0.4"
mime_guess = "2.0"
parsers = { path = "crates/parsers" }
pest = "2.8"
pest_derive = "2.8"
regex = "1.10"
reqwest = { version = "0.12", features = ["multipart", "stream"] }
reqwest_cookie_store = "0.9"
rfd = { version = "0.15", default-features = false, features = [
  "tokio",
  "xdg-portal",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9.0"
similar = "2.5"
sqlx = { version = "0.8", features = [
  "chrono",
  "runtime-tokio-native-tls",
  "sqlite",
  "uuid",
] }
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1.36", features = ["fs", "io-util", "macros"] }
toml = "0.9"
urlencoding = "2.1"
uuid = { version = "1.0", features = ["serde", "v4"] }

[dependencies]
anyhow.workspace = true
chrono.workspace = true
cookie_store.workspace = true
core.workspace = true
directories.workspace = true
env_logger.workspace = true
humansize.workspace = true
iced.workspace = true
iced_core.workspace = true
iced_plugins.workspace = true
iced_window_state_plugin.workspace = true
indexmap.workspace = true
jsonformat.workspace = true
jsonpath-rust.workspace = true
log.workspace = true
parsers.workspace = true
reqwest.workspace = true
reqwest_cookie_store.workspace = true
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
strum.workspace = true
tokio.workspace = true
uuid.workspace = true

[features]
default = ["iced/debug", "iced/hot"]

[profile.dev]
debug = 0
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
