[package]
name = "Sanchaar"
version.workspace = true
edition.workspace = true
description.workspace = true

[package.metadata.packager]
product-name = "Sanchaar"
identifier = "com.nrjais.sanchaar"
icons = [
  "assets/16x16.png",
  "assets/32x32.png",
  "assets/48x48.png",
  "assets/128x128.png",
  "assets/256x256.png",
  "assets/512x512.png",
  "assets/sanchaar.ico",
]

[package.metadata.packager.macos]
signing-identity = "-"

[workspace]
members = ["crates/core", "crates/parsers"]

[workspace.package]
version = "0.1.0-prerelease.1"
edition = "2024"
description = "A fast offline REST API Client"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
cookie_store = "0.22"
directories = "6.0"
dotenvy = "0.15.3"
env_logger = "0.11"
futures = "0.3"
humansize = "2.1"
iced = { git = "https://github.com/iced-rs/iced", branch = "master", features = [
  "advanced",
  "highlighter",
  "lazy",
  "sipper",
  "tokio",
  "web-colors",
  "wgpu",
] }
iced_auto_updater_plugin = { git = "https://github.com/nrjais/iced_plugins"}
iced_core = { git = "https://github.com/iced-rs/iced", branch = "master", features = [
  "advanced",
] }
iced_drop = { git = "https://github.com/pml68/iced_drop", branch = "master" }
iced_plugins = { git = "https://github.com/nrjais/iced_plugins"}
iced_window_state_plugin = { git = "https://github.com/nrjais/iced_plugins"}
indexmap = "2"
jsonformat = "2"
jsonpath-rust = "1"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
log = "0.4"
mime_guess = "2.0"
parsers = { path = "crates/parsers" }
pest = "2.8"
pest_derive = "2.8"
regex = "1.12"
rquickjs = { version = "0.10", features = [
  "array-buffer",
  "classes",
  "loader",
  "parallel",
] }
reqwest = { version = "0.12", default-features = false, features = [
  "multipart",
  "rustls-tls",
  "stream",
] }
reqwest_cookie_store = "0.9"
rfd = { version = "0.16", default-features = false, features = ["xdg-portal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9.0"
similar = "2.5"
sqlx = { version = "0.8", features = [
  "chrono",
  "runtime-tokio",
  "sqlite",
  "uuid",
] }
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1.36", features = ["fs", "io-util", "macros"] }
toml = "0.9"
urlencoding = "2.1"
uuid = { version = "1.0", features = ["serde", "v4"] }

[dependencies]
anyhow.workspace = true
chrono.workspace = true
cookie_store.workspace = true
directories.workspace = true
env_logger.workspace = true
futures.workspace = true
humansize.workspace = true
iced.workspace = true
iced_auto_updater_plugin.workspace = true
iced_core.workspace = true
iced_drop.workspace = true
iced_plugins.workspace = true
iced_window_state_plugin.workspace = true
indexmap.workspace = true
jsonformat.workspace = true
jsonpath-rust.workspace = true
lib = { package = "core", path = "crates/core" }
log.workspace = true
parsers.workspace = true
reqwest.workspace = true
reqwest_cookie_store.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
strum.workspace = true
tokio.workspace = true
uuid.workspace = true

[target.'cfg(not(target_os = "linux"))'.dependencies]
rfd = { workspace = true, default-features = false, features = ["tokio"] }

[target.'cfg(target_os = "linux")'.dependencies]
rfd = { workspace = true, default-features = false, features = [
  "async-std",
  "xdg-portal",
] }

[features]
default = ["iced/debug", "iced/hot"]

[profile.dev]
debug = 0
incremental = true

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
