[package]
name = "sanchaar"
version = "0.0.0"
description = "Sanchaar"
authors = ["Neeraj Jaiswal"]
license = "GPL-3.0-or-later"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-window-state = "2.0.0-beta"
tauri-plugin-http = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-store = "2.0.0-beta"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
