[package]
name = "cli"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
humansize = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
hex = "0.4.3"
