[package]
name = "core"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
iced.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
directories.workspace = true
reqwest.workspace = true
mime_guess.workspace = true
strum.workspace = true
regex.workspace = true
hcl-rs.workspace = true
similar.workspace = true
indexmap.workspace = true
dotenvy.workspace = true
reqwest_cookie_store.workspace = true
parsers.workspace = true
serde_with.workspace = true
