[package]
name = "core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
dotenvy.workspace = true
hcl-rs.workspace = true
iced.workspace = true
indexmap.workspace = true
mime_guess.workspace = true
parsers.workspace = true
regex.workspace = true
reqwest.workspace = true
reqwest_cookie_store.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
similar.workspace = true
strum.workspace = true
tokio.workspace = true
uuid = { version = "1.0", features = ["v4"] }
