[package]
name = "core"
version.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
directories.workspace = true
dotenvy.workspace = true
hcl-rs.workspace = true
iced.workspace = true
indexmap.workspace = true
mime_guess.workspace = true
parsers.workspace = true
regex.workspace = true
reqwest.workspace = true
reqwest_cookie_store.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
similar.workspace = true
sqlx.workspace = true
strum.workspace = true
tokio.workspace = true
