[package]
name = "gui"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
components = { workspace = true }
core = { workspace = true }
iced = { workspace = true }
tokio = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slotmap = { workspace = true }
humansize = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
rfd = { workspace = true }
log = { workspace = true }
indexmap = { workspace = true }
