[package]
name = "gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
components.workspace = true
cookie_store.workspace = true
core.workspace = true
humansize.workspace = true
iced.workspace = true
indexmap.workspace = true
jsonpath-rust.workspace = true
log.workspace = true
reqwest.workspace = true
reqwest_cookie_store.workspace = true
rfd.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tokio.workspace = true
uuid = { version = "1.0", features = ["v4"] }
