[package]
name = "js"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
rustyscript = { git = "https://github.com/nrjais/rustyscript", rev = "62c99dcf3ead4bc3eb0d9c33f8a66191eccf0dda", features = [
  "url",
  "crypto",
  "url_import",
  "console",
  "deno_fetch",
] }
