[package]
name = "js"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
deno_core = "0.283.0"
rustyscript = { git = "https://github.com/nrjais/rustyscript", rev = "4bf9ace29aa6f670cacfec7beaa4f69bfe409c1b", features = [
    "url",
    "crypto",
    "url_import",
    "console",
    "deno_fetch",
] }
